--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </p>
         </div>
         <div class="mainBtnGroup">
-            <a href="https://www.facebook.com/profile.php?id=100029948664207" class="btnMain">
+            <a href="https://www.facebook.com/thanhlongle236" class="btnMain">
                 <img src="./facebook.png" alt="" style="width: 30px; height: 30px;">
                 <span>Phây búc</span>
             </a>
