--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             margin-bottom: 10px;
             text-align: center;
         }
+        .mainInfo p a {
+            text-decoration: none;
+            color: #fff;
+        }
         .mainBtnGroup {
             margin-top: 25px;
             display: flex;
@@ -106,7 +110,7 @@
                 <i class="fa-solid fa-user-tie"></i> Lê Thanh Lòng
             </p>
             <p>
-                <i class="fa-solid fa-phone-flip"></i> 033 25 66 444
+                <a href="tel:8665562570"> <i class="fa-solid fa-phone-flip"></i> 033 25 66 444</a>
             </p>
             <p>
                 <i class="fa-solid fa-quote-left"></i> "Ủa gì? Ai biết gì đâu"
